grid-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid-client-deployment
  labels:
    app: grid-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grid-client
  template:
    metadata:
      labels:
        app: grid-client
    spec:
      containers:
      - name: grid-client-container
        image: oscaryik/grid-thing-client:2.7.1.D
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: grid-client-service
spec:
  type: LoadBalancer
  selector:
    app: grid-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
